--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description"
     content="LIZENA Будівництво - Професійні будівельні послуги для житлових та комерційних проектів">
   <title>LIZENA Будівництво - Будуємо Ваше Майбутнє</title>
-  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="./css/main.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
