--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <header class="header">
     <div class="container">
       <div class="header__content">
-        <a href="/" class="logo">
+        <a href="index.html" class="logo">
           <img src="public/images/logo.svg" alt="LIZENA Будівництво" class="logo__img">
           <div class="logo__text-container">
             <span class="logo__text">LIZENA</span>
@@ -29,11 +29,11 @@
         </a>
         <nav class="nav">
           <ul class="nav__list">
-            <li class="nav__item"><a href="/" class="nav__link nav__link--active">Головна</a></li>
-            <li class="nav__item"><a href="/about.html" class="nav__link">Про нас</a></li>
-            <li class="nav__item"><a href="/services.html" class="nav__link">Послуги</a></li>
-            <li class="nav__item"><a href="/portfolio.html" class="nav__link">Портфоліо</a></li>
-            <li class="nav__item"><a href="/contact.html" class="nav__link">Контакти</a></li>
+            <li class="nav__item"><a href="index.html" class="nav__link nav__link--active">Головна</a></li>
+            <li class="nav__item"><a href="about.html" class="nav__link">Про нас</a></li>
+            <li class="nav__item"><a href="services.html" class="nav__link">Послуги</a></li>
+            <li class="nav__item"><a href="portfolio.html" class="nav__link">Портфоліо</a></li>
+            <li class="nav__item"><a href="contact.html" class="nav__link">Контакти</a></li>
           </ul>
         </nav>
         <div class="header__phone">
@@ -65,8 +65,8 @@
           <p class="hero__subtitle">Ми перетворюємо ваші будівельні мрії на реальність з точністю, якістю та
             інноваціями.</p>
           <div class="hero__buttons">
-            <a href="/contact.html" class="btn btn--primary">Отримати кошторис</a>
-            <a href="/services.html" class="btn btn--secondary">Наші послуги</a>
+            <a href="contact.html" class="btn btn--primary">Отримати кошторис</a>
+            <a href="services.html" class="btn btn--secondary">Наші послуги</a>
           </div>
         </div>
       </div>
@@ -81,7 +81,7 @@
           <p class="section__subtitle">Комплексні будівельні рішення, адаптовані до ваших потреб</p>
         </div>
         <div class="services-grid">
-          <a href="/services/residential.html" class="service-card reveal fade-in-up-delay-1">
+          <a href="services/residential.html" class="service-card reveal fade-in-up-delay-1">
             <div class="service-card__icon">
               <img src="public/images/icons/residential.svg" alt="Житлове будівництво">
             </div>
@@ -90,7 +90,7 @@
               урахуванням вашого способу життя.</p>
             <span class="service-card__link">Дізнатися більше</span>
           </a>
-          <a href="/services/commercial.html" class="service-card reveal fade-in-up-delay-1">
+          <a href="services/commercial.html" class="service-card reveal fade-in-up-delay-1">
             <div class="service-card__icon">
               <img src="public/images/icons/commercial.svg" alt="Комерційне будівництво">
             </div>
@@ -99,7 +99,7 @@
               найвищими стандартами.</p>
             <span class="service-card__link">Дізнатися більше</span>
           </a>
-          <a href="/services/renovation.html" class="service-card reveal fade-in-up-delay-2">
+          <a href="services/renovation.html" class="service-card reveal fade-in-up-delay-2">
             <div class="service-card__icon">
               <img src="public/images/icons/renovation.svg" alt="Реконструкція">
             </div>
@@ -108,7 +108,7 @@
               реконструкції та ремонту.</p>
             <span class="service-card__link">Дізнатися більше</span>
           </a>
-          <a href="/services/design.html" class="service-card reveal fade-in-up-delay-2">
+          <a href="services/design.html" class="service-card reveal fade-in-up-delay-2">
             <div class="service-card__icon">
               <img src="public/images/icons/design.svg" alt="Проектування і планування">
             </div>
@@ -119,7 +119,7 @@
           </a>
         </div>
         <div class="section__footer reveal">
-          <a href="/services.html" class="btn btn--primary">Переглянути всі послуги</a>
+          <a href="services.html" class="btn btn--primary">Переглянути всі послуги</a>
         </div>
       </div>
     </section>
@@ -163,6 +163,26 @@
                   максимальної видимості та потоку клієнтів.</p>
               </div>
             </div>
+            <div class="portfolio-slider__item">
+              <img
+                src="https://images.unsplash.com/photo-1577495508048-b635879837f1?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80"
+                alt="Торговий центр" class="portfolio-slider__image">
+              <div class="portfolio-slider__content">
+                <h3 class="portfolio-slider__title">Торговий центр</h3>
+                <p class="portfolio-slider__description">Багатофункціональний торговий центр, спроектований для
+                  максимальної видимості та потоку клієнтів.</p>
+              </div>
+            </div>
+            <div class="portfolio-slider__item">
+              <img
+                src="https://images.unsplash.com/photo-1577495508048-b635879837f1?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80"
+                alt="Торговий центр" class="portfolio-slider__image">
+              <div class="portfolio-slider__content">
+                <h3 class="portfolio-slider__title">Торговий центр</h3>
+                <p class="portfolio-slider__description">Багатофункціональний торговий центр, спроектований для
+                  максимальної видимості та потоку клієнтів.</p>
+              </div>
+            </div>
           </div>
           <button class="portfolio-slider__arrow portfolio-slider__arrow--prev" aria-label="Попередній слайд">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -178,7 +198,7 @@
           </button>
         </div>
         <div class="section__footer reveal">
-          <a href="/portfolio.html" class="btn btn--primary">Переглянути всі проекти</a>
+          <a href="portfolio.html" class="btn btn--primary">Переглянути всі проекти</a>
         </div>
       </div>
     </section>
@@ -212,7 +232,7 @@
                 <span class="stat__label">Задоволених клієнтів</span>
               </div>
             </div>
-            <a href="/about.html" class="btn btn--primary">Дізнатися більше</a>
+            <a href="about.html" class="btn btn--primary">Дізнатися більше</a>
           </div>
           <div class="about__image reveal-right">
             <img
@@ -390,14 +410,15 @@
       <div class="footer__bottom">
         <p class="footer__copyright">&copy; 2025 LIZENA Будівництво. Всі права захищені.</p>
         <div class="footer__legal">
-          <a href="/privacy.html" class="footer__legal-link">Політика конфіденційності</a>
-          <a href="/terms.html" class="footer__legal-link">Умови використання</a>
+          <a href="privacy.html" class="footer__legal-link">Політика конфіденційності</a>
+          <a href="terms.html" class="footer__legal-link">Умови використання</a>
         </div>
       </div>
     </div>
   </footer>
 
-  <script type="module" src="/js/main.js"></script>
+  <!-- <script type="module" src="./js/main.js"></script> -->
+  <script src="./js/main.js"></script>
 </body>
 
 </html>
