--- a/services.html
+++ b/services.html
@@ -19,8 +19,8 @@
   <header class="header">
     <div class="container">
       <div class="header__content">
-        <a href="/" class="logo">
-          <img src="/images/logo.svg" alt="LIZENA Будівництво" class="logo__img">
+        <a href="index.html" class="logo">
+          <img src="public/images/logo.svg" alt="LIZENA Будівництво" class="logo__img">
           <div class="logo__text-container">
             <span class="logo__text">LIZENA</span>
             <span class="logo__subtitle">Будівельна компанія</span>
@@ -28,11 +28,11 @@
         </a>
         <nav class="nav">
           <ul class="nav__list">
-            <li class="nav__item"><a href="/" class="nav__link">Головна</a></li>
-            <li class="nav__item"><a href="/about.html" class="nav__link">Про нас</a></li>
-            <li class="nav__item"><a href="/services.html" class="nav__link nav__link--active">Послуги</a></li>
-            <li class="nav__item"><a href="/portfolio.html" class="nav__link">Портфоліо</a></li>
-            <li class="nav__item"><a href="/contact.html" class="nav__link">Контакти</a></li>
+            <li class="nav__item"><a href="index.html" class="nav__link">Головна</a></li>
+            <li class="nav__item"><a href="about.html" class="nav__link">Про нас</a></li>
+            <li class="nav__item"><a href="services.html" class="nav__link nav__link--active">Послуги</a></li>
+            <li class="nav__item"><a href="portfolio.html" class="nav__link">Портфоліо</a></li>
+            <li class="nav__item"><a href="contact.html" class="nav__link">Контакти</a></li>
           </ul>
         </nav>
         <button class="hamburger" aria-label="Меню">
@@ -50,7 +50,7 @@
       <div class="container">
         <h1 class="page-header__title">Наші послуги</h1>
         <div class="breadcrumbs">
-          <a href="/" class="breadcrumbs__link">Головна</a>
+          <a href="index.html" class="breadcrumbs__link">Головна</a>
           <span class="breadcrumbs__separator">/</span>
           <span class="breadcrumbs__current">Послуги</span>
         </div>
@@ -351,14 +351,14 @@
       <div class="footer__bottom">
         <p class="footer__copyright">&copy; 2025 LIZENA Будівництво. Всі права захищені.</p>
         <div class="footer__legal">
-          <a href="/privacy.html" class="footer__legal-link">Політика конфіденційності</a>
-          <a href="/terms.html" class="footer__legal-link">Умови використання</a>
+          <a href="privacy.html" class="footer__legal-link">Політика конфіденційності</a>
+          <a href="terms.html" class="footer__legal-link">Умови використання</a>
         </div>
       </div>
     </div>
   </footer>
 
-  <script type="module" src="/js/main.js"></script>
+  <script src="./js/main.js"></script>
 </body>
 
 </html>
