--- a/index.html
+++ b/index.html
@@ -313,8 +313,8 @@
           <p class="cta__text">Зв'яжіться з нами сьогодні для безкоштовної консультації та кошторису. Давайте разом
             побудуємо щось дивовижне.</p>
           <div class="cta__buttons">
-            <a href="/contact.html" class="btn btn--light">Зв'язатися</a>
-            <a href="/services.html" class="btn btn--outline-light">Дослідити послуги</a>
+            <a href="contact.html" class="btn btn--light">Зв'язатися</a>
+            <a href="services.html" class="btn btn--outline-light">Дослідити послуги</a>
           </div>
         </div>
       </div>
@@ -325,8 +325,8 @@
     <div class="container">
       <div class="footer__grid">
         <div class="footer__info">
-          <a href="/" class="logo logo--footer">
-            <img src="/images/logo-white.svg" alt="LIZENA Будівництво" class="logo__img">
+          <a href="index.html" class="logo logo--footer">
+            <img src="public/images/logo-white.svg" alt="LIZENA Будівництво" class="logo__img">
             <div class="logo__text-container">
               <span class="logo__text">LIZENA</span>
               <span class="logo__subtitle">Будівельна компанія</span>
@@ -369,20 +369,20 @@
         <div class="footer__links">
           <h3 class="footer__heading">Швидкі посилання</h3>
           <ul class="footer__list">
-            <li><a href="/" class="footer__link">Головна</a></li>
-            <li><a href="/about.html" class="footer__link">Про нас</a></li>
-            <li><a href="/services.html" class="footer__link">Послуги</a></li>
-            <li><a href="/portfolio.html" class="footer__link">Портфоліо</a></li>
-            <li><a href="/contact.html" class="footer__link">Контакти</a></li>
+            <li><a href="index.html" class="footer__link">Головна</a></li>
+            <li><a href="about.html" class="footer__link">Про нас</a></li>
+            <li><a href="services.html" class="footer__link">Послуги</a></li>
+            <li><a href="portfolio.html" class="footer__link">Портфоліо</a></li>
+            <li><a href="contact.html" class="footer__link">Контакти</a></li>
           </ul>
         </div>
         <div class="footer__links">
           <h3 class="footer__heading">Послуги</h3>
           <ul class="footer__list">
-            <li><a href="/services/residential.html" class="footer__link">Житлове будівництво</a></li>
-            <li><a href="/services/commercial.html" class="footer__link">Комерційне будівництво</a></li>
-            <li><a href="/services/renovation.html" class="footer__link">Реконструкція</a></li>
-            <li><a href="/services/design.html" class="footer__link">Проектування і планування</a></li>
+            <li><a href="services/residential.html" class="footer__link">Житлове будівництво</a></li>
+            <li><a href="services/commercial.html" class="footer__link">Комерційне будівництво</a></li>
+            <li><a href="services/renovation.html" class="footer__link">Реконструкція</a></li>
+            <li><a href="services/design.html" class="footer__link">Проектування і планування</a></li>
           </ul>
         </div>
         <div class="footer__contact">
