--- a/about.html
+++ b/about.html
@@ -421,10 +421,10 @@
         <div class="footer__links">
           <h3 class="footer__heading">Послуги</h3>
           <ul class="footer__list">
-            <li><a href="/services/residential.html" class="footer__link">Житлове будівництво</a></li>
-            <li><a href="/services/commercial.html" class="footer__link">Комерційне будівництво</a></li>
-            <li><a href="/services/renovation.html" class="footer__link">Реконструкція</a></li>
-            <li><a href="/services/design.html" class="footer__link">Проектування і планування</a></li>
+            <li><a href="services/residential.html" class="footer__link">Житлове будівництво</a></li>
+            <li><a href="services/commercial.html" class="footer__link">Комерційне будівництво</a></li>
+            <li><a href="services/renovation.html" class="footer__link">Реконструкція</a></li>
+            <li><a href="services/design.html" class="footer__link">Проектування і планування</a></li>
           </ul>
         </div>
         <div class="footer__contact">
