--- a/about.html
+++ b/about.html
@@ -81,10 +81,10 @@
             <p>Починаючи з невеликих проектів житлового будівництва, ми розширили наші послуги, щоб охопити комерційне
               будівництво, реконструкцію та дизайн. Наша відданість досконалості та увага до деталей дозволили нам
               побудувати міцну репутацію як одного з провідних будівельних підрядників в регіоні.</p>
-            <p>Сьогодні LIZENA Будівництво пишається тим, що завершила понад 500 проектів, від індивідуальних будинків
+            <!-- <p>Сьогодні LIZENA Будівництво пишається тим, що завершила понад 500 проектів, від індивідуальних будинків
               до великих комерційних комплексів. Ми продовжуємо рости та адаптуватися до мінливих потреб галузі,
               впроваджуючи нові технології та сталі практики, щоб забезпечити найкращі результати для наших клієнтів.
-            </p>
+            </p> -->
           </div>
           <div class="about-section__image reveal-right">
             <img
@@ -225,7 +225,7 @@
     </section>
 
     <!-- Our Team -->
-    <section class="section section--gray">
+    <!-- <section class="section section--gray">
       <div class="container">
         <div class="section__header reveal">
           <h2 class="section__title">Наша команда</h2>
@@ -346,7 +346,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- CTA Section -->
     <section class="cta">
