--- a/contact.html
+++ b/contact.html
@@ -93,8 +93,8 @@
               <div class="contact-info__content">
                 <h3 class="contact-info__title">Наше розташування</h3>
                 <address class="contact-info__address">
-                  вул. Будівельна 123,<br>
-                  м. Київ, 10001
+                  вул. Богданівська 11 а,<br>
+                  м. Львів
                 </address>
               </div>
             </div>
@@ -110,8 +110,7 @@
               </div>
               <div class="contact-info__content">
                 <h3 class="contact-info__title">Номер телефону</h3>
-                <p><a href="tel:+380971872519">+380971872519</a></p>
-                <p><a href="tel:+380509876543">(050) 987-6543</a></p>
+                <p><a href="tel:+380988997707">+38 (098)899 77 07</a></p>
               </div>
             </div>
 
@@ -125,8 +124,7 @@
               </div>
               <div class="contact-info__content">
                 <h3 class="contact-info__title">Електронна пошта</h3>
-                <p><a href="mailto:info@lizena.com">info@lizena.com</a></p>
-                <p><a href="mailto:support@lizena.com">support@lizena.com</a></p>
+                <p><a href="mailto:info@lizena.com">Lizenadoc@gmail.com</a></p>
               </div>
             </div>
 
@@ -193,11 +191,11 @@
                   <span class="form__error" id="nameError"></span>
                 </div>
 
-                <div class="form__group">
+                <!-- <div class="form__group">
                   <label for="email" class="form__label">Електронна пошта *</label>
                   <input type="email" id="email" name="email" class="form__input" required>
                   <span class="form__error" id="emailError"></span>
-                </div>
+                </div> -->
 
                 <div class="form__group">
                   <label for="phone" class="form__label">Номер телефону</label>
