--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="icon" type="image/svg+xml" href="/public/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="LIZENA Будівництво - Наші комплексні будівельні послуги">
   <title>Послуги - LIZENA Будівництво</title>
@@ -20,7 +20,7 @@
     <div class="container">
       <div class="header__content">
         <a href="index.html" class="logo">
-          <img src="public/images/logo.svg" alt="LIZENA Будівництво" class="logo__img">
+          <img src="public/images/logoliz.png" alt="LIZENA Будівництво" class="logo__img">
           <div class="logo__text-container">
             <span class="logo__text">LIZENA</span>
             <span class="logo__subtitle">Будівельна компанія</span>
@@ -69,8 +69,8 @@
           <p>У LIZENA Будівництво ми пропонуємо повний спектр будівельних послуг, розроблених для задоволення
             різноманітних потреб наших клієнтів. Від житлового та комерційного будівництва до реконструкції та
             проектування, наша досвідчена команда забезпечує виняткову якість та увагу до деталей у кожному проекті.</p>
-          <p>Наше прагнення до досконалості, інновацій та сталих будівельних практик гарантує, що ми надаємо результати,
-            які перевершують очікування та витримують випробування часом.</p>
+          <!-- <p>Наше прагнення до досконалості, інновацій та сталих будівельних практик гарантує, що ми надаємо результати,
+            які перевершують очікування та витримують випробування часом.</p> -->
         </div>
       </div>
     </section>
@@ -89,15 +89,12 @@
             <div class="service-item__content">
               <h3 class="service-item__title">Житлове будівництво</h3>
               <p class="service-item__description">Ми будуємо індивідуальні будинки, які відображають ваш унікальний
-                стиль та відповідають вашим конкретним потребам. Наші послуги з житлового будівництва поєднують якісну
-                майстерність, інноваційний дизайн та увагу до деталей, щоб створити житлові простори, які ви будете
-                любити протягом багатьох років.</p>
+                стиль та відповідають вашим конкретним потребам.</p>
               <ul class="service-item__features">
                 <li>Будівництво індивідуальних будинків</li>
                 <li>Прибудови та розширення</li>
                 <li>Елітні житлові проекти</li>
                 <li>Енергоефективне будівництво</li>
-                <li>Інтеграція розумного дому</li>
               </ul>
               <a href="/services/residential.html" class="btn btn--primary">Дізнатися більше</a>
             </div>
@@ -112,8 +109,7 @@
             </div>
             <div class="service-item__content">
               <h3 class="service-item__title">Комерційне будівництво</h3>
-              <p class="service-item__description">Наші послуги з комерційного будівництва забезпечують високоякісні,
-                функціональні простори для бізнесу будь-якого розміру. Від офісних будівель до торгових центрів, ми
+              <p class="service-item__description">Від офісних будівель до торгових центрів, ми
                 поєднуємо інноваційний дизайн з практичною функціональністю, щоб створити комерційні простори, які
                 підвищують продуктивність та вражають клієнтів.</p>
               <ul class="service-item__features">
@@ -135,14 +131,13 @@
                 alt="Реконструкція">
             </div>
             <div class="service-item__content">
-              <h3 class="service-item__title">Реконструкція</h3>
-              <p class="service-item__description">Перетворіть ваш існуючий простір за допомогою наших експертних послуг
-                з реконструкції. Незалежно від того, чи хочете ви оновити одну кімнату або повністю перебудувати ваш
-                будинок чи комерційний об'єкт, наша команда працюватиме з вами, щоб втілити ваше бачення, одночасно
-                підвищуючи функціональність та вартість.</p>
+              <h3 class="service-item__title">Реконструкція, ремонт квартир, котеджів</h3>
+              <p class="service-item__description">Реконструкція та ремонт квартир, котеджів – комплексне оновлення
+                житла «під ключ». Виконуємо демонтаж, перепланування, оздоблення, інженерні роботи. Якість, терміни,
+                індивідуальний підхід.</p>
               <ul class="service-item__features">
                 <li>Повна реконструкція будинків</li>
-                <li>Ремонт кухонь та ванних кімнат</li>
+                <li>Ремонт квартир та будинків "під ключ"</li>
                 <li>Реконструкція комерційних приміщень</li>
                 <li>Реставрація історичних будівель</li>
                 <li>Оздоблення та переобладнання підвалів</li>
@@ -152,7 +147,7 @@
           </div>
 
           <!-- Design & Planning -->
-          <div class="service-item service-item--reverse">
+          <!-- <div class="service-item service-item--reverse">
             <div class="service-item__image">
               <img
                 src="https://images.unsplash.com/photo-1503387762-592deb58ef4e?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80"
@@ -173,7 +168,7 @@
               </ul>
               <a href="/services/design.html" class="btn btn--primary">Дізнатися більше</a>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
