--- a/services/residential.html
+++ b/services/residential.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="icon" type="image/svg+xml" href="public/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
     content="LIZENA Construction - Residential construction services for custom homes and renovations">
@@ -21,7 +21,7 @@
     <div class="container">
       <div class="header__content">
         <a href="/" class="logo">
-          <img src="/images/logo.svg" alt="LIZENA Construction" class="logo__img">
+          <img src="/images/logoliz.svg" alt="LIZENA Construction" class="logo__img">
           <div class="logo__text-container">
             <span class="logo__text">LIZENA</span>
             <span class="logo__subtitle">Строительная компания</span>
@@ -29,11 +29,11 @@
         </a>
         <nav class="nav">
           <ul class="nav__list">
-            <li class="nav__item"><a href="/" class="nav__link">Home</a></li>
-            <li class="nav__item"><a href="/about.html" class="nav__link">About</a></li>
-            <li class="nav__item"><a href="/services.html" class="nav__link nav__link--active">Services</a></li>
-            <li class="nav__item"><a href="/portfolio.html" class="nav__link">Portfolio</a></li>
-            <li class="nav__item"><a href="/contact.html" class="nav__link">Contact</a></li>
+            <li class="nav__item"><a href="/" class="nav__link">Головна</a></li>
+            <li class="nav__item"><a href="/about.html" class="nav__link">Про нас</a></li>
+            <li class="nav__item"><a href="/services.html" class="nav__link nav__link--active">Послуги</a></li>
+            <li class="nav__item"><a href="/portfolio.html" class="nav__link">Портфоліо</a></li>
+            <li class="nav__item"><a href="/contact.html" class="nav__link">Контакти</a></li>
           </ul>
         </nav>
         <button class="hamburger" aria-label="Menu">
@@ -49,13 +49,13 @@
     <!-- Page Header -->
     <section class="page-header">
       <div class="container">
-        <h1 class="page-header__title">Residential Construction</h1>
+        <h1 class="page-header__title">Житлове будівництво</h1>
         <div class="breadcrumbs">
           <a href="/" class="breadcrumbs__link">Home</a>
           <span class="breadcrumbs__separator">/</span>
-          <a href="/services.html" class="breadcrumbs__link">Services</a>
+          <a href="/services.html" class="breadcrumbs__link">Послуги</a>
           <span class="breadcrumbs__separator">/</span>
-          <span class="breadcrumbs__current">Residential Construction</span>
+          <span class="breadcrumbs__current">Житлове будівництво</span>
         </div>
       </div>
       <div class="page-header__overlay"></div>
@@ -71,14 +71,16 @@
               alt="Luxury Residential Construction">
           </div>
           <div class="service-detail__content">
-            <h2 class="service-detail__title">Custom Home Building Excellence</h2>
-            <p class="service-detail__description">At LIZENA Construction, we specialize in creating exceptional custom
-              homes that reflect your unique style, meet your specific needs, and exceed your expectations. Our
-              residential construction services combine quality craftsmanship, innovative design, and meticulous
-              attention to detail to create living spaces that you'll love for years to come.</p>
-            <p class="service-detail__description">Whether you're building your dream home from the ground up, adding an
+            <h2 class="service-detail__title">Приватні будинки, котеджі</h2>
+            <p class="service-detail__description">У LIZENA Construction ми спеціалізуємося на створенні виняткового
+              замовлення
+              будинки, які відображають ваш унікальний стиль, відповідають вашим конкретним потребам і перевершують ваші
+              очікування.Послуги з будівництва житлових будинків поєднують у собі якісну майстерність, інноваційний
+              дизайн і ретельність увага до деталей, щоб створити житловий простір, який ви будете любити довгі роки.
+            </p>
+            <!-- <p class="service-detail__description">Whether you're building your dream home from the ground up, adding an
               extension to your existing property, or undertaking a major renovation, our experienced team will guide
-              you through every step of the process, ensuring a smooth and stress-free experience.</p>
+              you through every step of the process, ensuring a smooth and stress-free experience.</p> -->
           </div>
         </div>
       </div>
@@ -88,10 +90,10 @@
     <section class="section section--gray">
       <div class="container">
         <div class="section__header">
-          <h2 class="section__title">Our Residential Construction Services</h2>
-          <p class="section__subtitle">Comprehensive solutions for your home building needs</p>
+          <h2 class="section__title">Ціни на наші послуги з будівництва житла</h2>
+          <p class="section__subtitle">Комплексні рішення для потреб вашого будинку</p>
         </div>
-        <div class="features-grid">
+        <!-- <div class="features-grid">
           <div class="feature-card reveal fade-in-up-delay-1">
             <div class="feature-card__icon">
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -180,12 +182,12 @@
               your vision, establish a realistic budget, and create a detailed roadmap for your residential construction
               project.</p>
           </div>
-        </div>
+        </div> -->
       </div>
     </section>
 
     <!-- Why Choose Us -->
-    <section class="section">
+    <!-- <section class="section">
       <div class="container">
         <div class="section__header">
           <h2 class="section__title">Why Choose LIZENA for Your Home</h2>
@@ -218,10 +220,10 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- Portfolio Section -->
-    <section class="section section--gray">
+    <!-- <section class="section section--gray">
       <div class="container">
         <div class="section__header">
           <h2 class="section__title">Our Residential Projects</h2>
@@ -305,10 +307,10 @@
           <a href="/portfolio.html" class="btn btn--primary">View All Projects</a>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- Quote Form -->
-    <section class="section">
+    <!-- <section class="section">
       <div class="container">
         <div class="quote-section">
           <div class="quote-section__content reveal-left">
@@ -404,17 +406,18 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- CTA Section -->
     <section class="cta">
       <div class="container">
         <div class="cta__content">
-          <h2 class="cta__title">Ready to Build Your Dream Home?</h2>
-          <p class="cta__text">Contact our team today to discuss your residential construction project.</p>
+          <h2 class="cta__title">Готові побудувати дім своєї мрії?</h2>
+          <p class="cta__text">Зв’яжіться з нашою командою сьогодні, щоб обговорити ваш проект житлового будівництва.
+          </p>
           <div class="cta__buttons">
-            <a href="/contact.html" class="btn btn--light">Get in Touch</a>
-            <a href="/portfolio.html" class="btn btn--outline-light">View Our Work</a>
+            <a href="/contact.html" class="btn btn--light">Зв'яжіться з нами</a>
+            <a href="/portfolio.html" class="btn btn--outline-light">Перегляньте нашу роботу</a>
           </div>
         </div>
       </div>
