--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="container">
       <div class="header__content">
         <a href="index.html" class="logo">
-          <img src="public/images/logo.svg" alt="LIZENA Будівництво" class="logo__img">
+          <img src="public/images/logoliz.png" alt="LIZENA Будівництво" class="logo__img">
           <div class="logo__text-container">
             <span class="logo__text">LIZENA</span>
             <span class="logo__subtitle">Будівельна компанія</span>
@@ -32,19 +32,19 @@
             <li class="nav__item"><a href="index.html" class="nav__link nav__link--active">Головна</a></li>
             <li class="nav__item"><a href="about.html" class="nav__link">Про нас</a></li>
             <li class="nav__item"><a href="services.html" class="nav__link">Послуги</a></li>
-            <li class="nav__item"><a href="portfolio.html" class="nav__link">Портфоліо</a></li>
+            <!-- <li class="nav__item"><a href="portfolio.html" class="nav__link">Наші об'єкти</a></li> -->
             <li class="nav__item"><a href="contact.html" class="nav__link">Контакти</a></li>
           </ul>
         </nav>
         <div class="header__phone">
-          <a href="tel:+380971872519" class="header__phone-link">
+          <a href="tel:+380988997707" class="header__phone-link">
             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none"
               stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
               <path
                 d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z">
               </path>
             </svg>
-            +380971872519
+            +38 (098)899 77 07
           </a>
         </div>
         <button class="hamburger" aria-label="Меню">
@@ -61,9 +61,21 @@
     <section class="hero">
       <div class="container">
         <div class="hero__content">
-          <h1 class="hero__title">Будуємо досконалість <span>З 1995 року</span></h1>
+          <div class="hero__head-p">
+            <h1>
+              <span class="headline-main">Будівництво<br></span>
+              <span class="headline-sub">будинків <small>та</small> котеджів</span>
+            </h1>
+            <hr>
+            <p>► КОРОБКА БУДИНКУ<br><span class="vid">від</span> <span style="font-size: 44px"><b>250
+                  $/м2</b></span> (<s>340 $/м2</s>)</p>
+            <p>► БУДИНОК ПІД КЛЮЧ<br><span class="vid">від</span> <span style="font-size: 44px"><b>425
+                  $/м2</b></span> (<s>560 $/м2</s>)</p>
+          </div>
+          <!-- <h1 class="hero__title">Будуємо досконалість <span>З 2009 року</span></h1>
+          <h1 class="hero__title"><span>Будівництво</span> будинків <small>та</small> котеджів</h1>
           <p class="hero__subtitle">Ми перетворюємо ваші будівельні мрії на реальність з точністю, якістю та
-            інноваціями.</p>
+            інноваціями.</p> -->
           <div class="hero__buttons">
             <a href="contact.html" class="btn btn--primary">Отримати кошторис</a>
             <a href="services.html" class="btn btn--secondary">Наші послуги</a>
